# StepperController-Python

./: README.md  genindex.md  platformio.ini  positions.csv  postitions.csv  profile1.csv  profile1_theta1.csv  profile2.csv  profile3.csv  pyproject.toml
Python/: README.md  Stepper_Controller_Arduino_v2_5.py  configuration.py  manager.py  plotting.py  profile0.txt  profile1.txt  schemas.py  test.csv  utils.py
source/: GUI.md  Stepper_Controller_Arduino.md  ThreadedTask.md  configuration.md  manager.md  plotting.md  schemas.md  utils.md
src/: README.md  main.cpp
