[tool.poetry]
name = "freemove-python"
version = "0.1.0"
description = "Project to create a gui for the motor control of the FreeMove testrig"
authors = ["Kiaulehn <vkiaulehn@ukaachen.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "1.24.3"
imageio = "2.26.0"
matplotlib = "3.7.2"
pandas = "2.0.3"
Pillow = "10.1.0"
plotly = "5.9.0"
pyserial = "3.5"
tqdm = "4.65.0"
openai = "^0.28.1"
redbaron = "^0.9.2"
autoflake = "^2.2.1"
black = "^23.10.1"
pydantic = "^2.4.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
